# OpenSati

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements-audio.txt  requirements.txt
.github/workflows/: ci.yml
docs/: DESIGN_SYSTEM.md  PRD.md
resources/: README.md
scripts/: build.py  install.bat  install.sh
src/opensati/: __init__.py  __main__.py  app.py
src/opensati/ai/: intent.py  ollama_client.py  ollama_setup.py  sentiment.py
src/opensati/config/: settings.py
src/opensati/core/: __init__.py  activity.py  audio.py  detector.py  mac_input.py  sensors.py  vision.py
src/opensati/interventions/: __init__.py  blur.py  decompression.py  grayscale.py  overlay.py
src/opensati/ui/: intent_bar.py  settings.py  tray.py  widget.py
tests/: __init__.py  test_detector.py  test_sensors.py  test_settings.py
